Bug 333933 - DebugGUi mode activated crashes app when modifying field of the table form
Summary: DebugGUi mode activated crashes app when modifying field of the table form
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9 Alpha
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Wojciech Kosowicz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-26 18:36 UTC by Wojciech Kosowicz
Modified: 2019-02-18 19:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
staniek: Usability+


Attachments
Quick fix for checking if lastItem exists (797 bytes, patch)
2014-04-26 18:41 UTC, Wojciech Kosowicz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wojciech Kosowicz 2014-04-26 18:36:39 UTC
In DebugGUI mode application crashes when modified one field of the table and then the field is change to another. In normal mode this does not occur

Reproducible: Always

Steps to Reproduce:
1. Activate DebugGui
2. Create database
3. Create table
4. Modify one field
5. Move to another fields
Actual Results:  
Segmentation fault occurs

Expected Results:  
Application should not crash
Comment 1 Wojciech Kosowicz 2014-04-26 18:41:08 UTC
Created attachment 86283 [details]
Quick fix for checking if lastItem exists

I did this quick fix. So the app would not crash when in debug mode. Still later full patch needs to be given
Comment 2 Wojciech Kosowicz 2014-04-30 21:20:46 UTC
Git commit bd2d0c2ffc211dd8296ab90df95aea64cf94495e by Wojciech Kosowicz.
Committed on 30/04/2014 at 21:07.
Pushed by wkosowicz into branch 'master'.

Fixed crash when trying to modifying table field in form in DebugGUI
REVIEW:117797

M  +10   -5    kexi/kexiutils/debuggui.cpp

http://commits.kde.org/calligra/bd2d0c2ffc211dd8296ab90df95aea64cf94495e
Comment 3 Wojciech Kosowicz 2014-05-01 13:49:06 UTC
Git commit 4d9b8e574cbee5d1fe8edcc522934da7cd9f5bfb by Wojciech Kosowicz.
Committed on 30/04/2014 at 21:07.
Pushed by wkosowicz into branch 'calligra/2.8'.

Fixed crash when trying to modifying table field in form in DebugGUI
REVIEW:117797

Conflicts:
	kexi/kexiutils/debuggui.cpp

M  +4    -1    kexi/kexiutils/debuggui.cpp

http://commits.kde.org/calligra/4d9b8e574cbee5d1fe8edcc522934da7cd9f5bfb