Fixed crash when trying to modifying table field in form in DebugGUI

BUG: 333933
REVIEW:117797

Conflicts:
	kexi/kexiutils/debuggui.cpp